Fixed Title placement on small screens and added again dark overlay (previously removed).

--- a/css/style.scss
+++ b/css/style.scss
@@ -416,11 +416,22 @@ code.overflow {
   z-index: 0;
   width: 100%;
 }
+.new-blog .interna-post-image {
+  padding: 0;
+  height: 700px;
+  background-size: cover;
+  background-position: center;
+}
+@media only screen and (max-width: 767px)  {
+  .new-blog .interna-post-image {
+    height: 500px;
+  }
+}
 .new-blog .interna-post-title header {
     left: 50%;
     margin-left: -25%;
     position: absolute;
-    top: 60%;
+    top: 50%;
     width: 50%;
     z-index: 2;
     text-align: center;
@@ -436,31 +447,14 @@ code.overflow {
   .new-blog .interna-post-title header {
     width: 80%;
     margin-left: -40%;
-    top: 30%;
+    top: 35%;
   }
 }
-@media only screen and (max-width: 767px)  {
-  .new-blog .interna-post-title header {
-    left: auto;
-    margin-left: auto;
-    position: relative;
-    top: auto;
-    width: 100%;
-    text-shadow: none;
-    margin-top: 50px;
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-}
+
 .new-blog .interna-post-title header h1 {
   color: #fff;
   font-size: 36px;
   line-height: 44px;
-}
-@media only screen and (max-width: 767px)  {
-  .new-blog .interna-post-title header h1 {
-    color: #303030;
-  }
 }
 @media only screen and (max-width: 500px)  {
   .new-blog .interna-post-title header h1 {
@@ -471,11 +465,6 @@ code.overflow {
 .new-blog .interna-post-title header time {
   color: #fff;
   font-size: 18px;
-}
-@media only screen and (max-width: 767px)  {
-  .new-blog .interna-post-title header time {
-    color: #505050;
-  }
 }
 .new-blog .interna-content-post {
   margin-top: 55px;
@@ -616,9 +605,4 @@ background: -o-linear-gradient(top, rgba(76,76,76,0) 0%, rgba(15,15,15,0.81) 81%
 background: -ms-linear-gradient(top, rgba(76,76,76,0) 0%, rgba(15,15,15,0.81) 81%, rgba(15,15,15,1) 100%);
 background: linear-gradient(to bottom, rgba(76,76,76,0) 0%, rgba(15,15,15,0.81) 81%, rgba(15,15,15,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#0f0f0f', GradientType=0 );
-}
-@media only screen and (max-width: 767px)  {
-  .new-blog .interna-post .overlay {
-    display: none;
-  }
 }
